// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessHours component should render default values 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Business hours
    </h1>
  </div>
  <div
    class="pageContainer"
  >
    <div
      class="body-regular contentWrapper mb-5"
    >
      <div
        class="mb32"
      >
        <p>
          Let customers know when your team is online.
          <br />
          This way, you can set different auto-responders in the rules based on when your team is working.
        </p>
        <p>
          The appearance of your
           
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            Chat integrations
          </a>
           
          will change when outside business hours.
        </p>
      </div>
      <form
        class=""
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="inputField mb32"
            >
              <label
                class="control-label businessHoursLabelWrapper"
              >
                Business hours
              </label>
              <div
                class="flex mb24"
              >
                <div
                  class="businessHoursInput"
                >
                  <div>
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-toggle="dropdown"
                      >
                        <div
                          class="select dropdown-toggle"
                        >
                          <span
                            class="label"
                            style="min-width: 82px; opacity: 1;"
                          >
                            <i>
                              Weekdays
                            </i>
                          </span>
                          <input
                            autocomplete="chrome-off"
                            class="input"
                            style="min-width: 82px;"
                            type="text"
                            value=""
                          />
                          <i
                            class="material-icons dropdownIcon"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        class="options dropdown-menu"
                        role="menu"
                        tabindex="-1"
                      >
                        <button
                          class="option option--focused dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Everyday
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Weekend
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Monday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Tuesday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Wednesday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Thursday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Friday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Saturday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Sunday
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <input
                    class="timeField form-control"
                    name="fromTime"
                    pattern="[0-9][0-9]:[0-9][0-9]"
                    type="time"
                    value="09:00"
                  />
                  <p>
                    to
                  </p>
                  <input
                    class="timeField form-control"
                    name="toTime"
                    pattern="[0-9][0-9]:[0-9][0-9]"
                    type="time"
                    value="17:00"
                  />
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red"
                  >
                    clear
                  </i>
                </div>
              </div>
              <button
                aria-disabled="false"
                class="wrapper fill secondary medium"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="material-icons icon medium"
                >
                  add
                </i>
                <span
                  class="content"
                >
                  Add business hours
                </span>
              </button>
            </div>
            <div
              class="InputField inputField mb40 form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-timezone"
              >
                Time zone
              </label>
              <div
                class="select dropdown-toggle"
              >
                <select
                  class="field form-control"
                  id="id-timezone"
                >
                  <option
                    value="UTC"
                  >
                    UTC
                  </option>
                  <option
                    value="US/Pacific"
                  >
                    US/Pacific
                  </option>
                  <option
                    value="Australia/AUR"
                  >
                    Australia/AUR
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="wrapper fill primary medium"
          type="submit"
        >
          <span
            class="content"
          >
            Save changes
          </span>
        </button>
      </form>
    </div>
    <div>
      Custom Business Hours
    </div>
  </div>
</div>
`;

exports[`BusinessHours component should render values from state 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Business hours
    </h1>
  </div>
  <div
    class="pageContainer"
  >
    <div
      class="body-regular contentWrapper mb-5"
    >
      <div
        class="mb32"
      >
        <p>
          Let customers know when your team is online.
          <br />
          This way, you can set different auto-responders in the rules based on when your team is working.
        </p>
        <p>
          The appearance of your
           
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            Chat integrations
          </a>
           
          will change when outside business hours.
        </p>
      </div>
      <form
        class=""
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="inputField mb32"
            >
              <label
                class="control-label businessHoursLabelWrapper"
              >
                Business hours
              </label>
              <div
                class="flex mb24"
              >
                <div
                  class="businessHoursInput"
                >
                  <div>
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-toggle="dropdown"
                      >
                        <div
                          class="select dropdown-toggle"
                        >
                          <span
                            class="label"
                            style="min-width: 82px; opacity: 1;"
                          >
                            Tuesday
                          </span>
                          <input
                            autocomplete="chrome-off"
                            class="input"
                            style="min-width: 82px;"
                            type="text"
                            value=""
                          />
                          <i
                            class="material-icons dropdownIcon"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        class="options dropdown-menu"
                        role="menu"
                        tabindex="-1"
                      >
                        <button
                          class="option option--focused dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Everyday
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Weekdays
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Weekend
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Monday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Wednesday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Thursday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Friday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Saturday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Sunday
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <input
                    class="timeField form-control"
                    name="fromTime"
                    pattern="[0-9][0-9]:[0-9][0-9]"
                    type="time"
                    value="10:00"
                  />
                  <p>
                    to
                  </p>
                  <input
                    class="timeField form-control"
                    name="toTime"
                    pattern="[0-9][0-9]:[0-9][0-9]"
                    type="time"
                    value="17:00"
                  />
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red"
                  >
                    clear
                  </i>
                </div>
              </div>
              <div
                class="flex mb24"
              >
                <div
                  class="businessHoursInput"
                >
                  <div>
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-toggle="dropdown"
                      >
                        <div
                          class="select dropdown-toggle"
                        >
                          <span
                            class="label"
                            style="min-width: 82px; opacity: 1;"
                          >
                            Thursday
                          </span>
                          <input
                            autocomplete="chrome-off"
                            class="input"
                            style="min-width: 82px;"
                            type="text"
                            value=""
                          />
                          <i
                            class="material-icons dropdownIcon"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        class="options dropdown-menu"
                        role="menu"
                        tabindex="-1"
                      >
                        <button
                          class="option option--focused dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Everyday
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Weekdays
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            <i>
                              Weekend
                            </i>
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Monday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Tuesday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Wednesday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Friday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Saturday
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            Sunday
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <input
                    class="timeField form-control"
                    name="fromTime"
                    pattern="[0-9][0-9]:[0-9][0-9]"
                    type="time"
                    value="11:00"
                  />
                  <p>
                    to
                  </p>
                  <input
                    class="timeField form-control"
                    name="toTime"
                    pattern="[0-9][0-9]:[0-9][0-9]"
                    type="time"
                    value="17:00"
                  />
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red"
                  >
                    clear
                  </i>
                </div>
              </div>
              <button
                aria-disabled="false"
                class="wrapper fill secondary medium"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="material-icons icon medium"
                >
                  add
                </i>
                <span
                  class="content"
                >
                  Add business hours
                </span>
              </button>
            </div>
            <div
              class="InputField inputField mb40 form-group"
              color=""
            >
              <label
                class="control-label"
                for="id-timezone"
              >
                Time zone
              </label>
              <div
                class="select dropdown-toggle"
              >
                <select
                  class="field form-control"
                  id="id-timezone"
                >
                  <option
                    value="UTC"
                  >
                    UTC
                  </option>
                  <option
                    value="US/Pacific"
                  >
                    US/Pacific
                  </option>
                  <option
                    value="Australia/AUR"
                  >
                    Australia/AUR
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="wrapper fill primary medium"
          type="submit"
        >
          <span
            class="content"
          >
            Save changes
          </span>
        </button>
      </form>
    </div>
    <div>
      Custom Business Hours
    </div>
  </div>
</div>
`;
